# modularml-lib

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: clang_format.yaml  cmake-multi-platform.yml  super_linter.yaml
onnx2json/: onnx2json.py
src/dataloader/: image_loader.cpp  image_resizer_and_cropper.cpp  stb_image_defines.cpp
src/datastructures/: array_utility.tpp  mml_array.tpp  mml_tensor.tpp  tensor_factory.tpp  tensor_factory_functions.tpp  tensor_utility.tpp
src/include/: modularml
src/include/dataloader/: a_data_loader.hpp  a_image_resizer_and_cropper.hpp  data_loader_config.hpp  image_loader.hpp  resize_and_cropper.hpp
src/include/datastructures/: a_tensor.hpp  array_utility.hpp  mml_array.hpp  mml_tensor.hpp  tensor_concept.hpp  tensor_factory.hpp  tensor_factory_function_types.hpp  tensor_factory_functions.hpp  tensor_utility.hpp
src/include/model/: a_model.hpp  mml_model.hpp
src/include/nodes/: a_node(new).hpp  a_node.hpp  add.hpp  avg_pool.hpp  constant.hpp  conv.hpp  dropout.hpp  elu.hpp  flatten.hpp  gelu.hpp  gemm.hpp  global_avg_pool.hpp  leaky_relu.hpp  log_softmax.hpp  lrn.hpp  matmul.hpp  max_pool.hpp  node_utils.hpp  relu.hpp  reshape.hpp  sigmoid.hpp  swish.hpp  tanh.hpp  transpose.hpp
src/include/normalizer/: a_normalizer.hpp  mml_normalizer.hpp
src/include/operations/: avx512_gemm.hpp  avx_gemm.hpp  blas_gemm.hpp  default_operations.hpp  intel_mkl_gemm.hpp  operation_function_types.hpp  tensor_operations_module.hpp
src/include/parser/: a_data_parser.hpp  mml_parser.hpp  parser_helper.hpp
src/include/utility/: base64.hpp  profiler.hpp
src/model/: mml_model.cpp
src/nodes/: add.cpp  avg_pool.cpp  constant.cpp  conv.cpp  dropout.cpp  elu.cpp  flatten.cpp  gelu.cpp  gemm.cpp  global_avg_pool.cpp  leaky_relu.cpp  log_softmax.cpp  lrn.cpp  matmul.cpp  max_pool.cpp  relu.cpp  reshape.cpp  sigmoid.cpp  swish.cpp  tanh.cpp  transpose.cpp
src/normalizer/: mml_normalizer.cpp
src/operations/: avx512_gemm.tpp  avx_gemm.tpp  blas_gemm.tpp  default_operations.tpp  intel_mkl_gemm.tpp  tensor_operations_module.tpp
src/parser/: mml_parser.cpp
src/utility/: profiler.cpp
tests/: test_ImageNet.cpp  test_activation_nodes.cpp  test_conv_node.cpp  test_flatten_node.cpp  test_gemm_node.cpp  test_image_loader.cpp  test_image_resizer_and_cropper.cpp  test_image_to_guess.cpp  test_log_softmax_node.cpp  test_lrn_node.cpp  test_matmul_node.cpp  test_mml_arithmetic.cpp  test_mml_gemm.cpp  test_mml_onnx_gemm.cpp  test_mml_pooling.cpp  test_mml_tensor.cpp  test_normalizer.cpp  test_parser_model.cpp  test_profiler.cpp  test_reshape_node.cpp  test_tensor_operations_module.cpp  test_tensor_utility.cpp  test_transpose_node.cpp
tests/data/lenet/: lenet.json
tests/data/simple-test-model/: test.json
